# python-autorotate

./: MANIFEST.in  README.md  install.sh  rotate.py  setup.cfg  tray.py  uninstall.sh
autorotate/: rotate.py  tray.py
