[metadata]
name = autorotate
version = 0.0.1
author = André Götz
author_email = andregoetz@proton.me
description = Autorotating your screen
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andregoetz/python-autorotate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: Linux x86_64

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
